--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -1,5 +1,5 @@
 .hero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../../../public/images/landing.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../../images/landing.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
