--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -1,4 +1,4 @@
-header {
+/* header {
   background-color: #fff;
   height: 10vh;
   box-shadow: 0 5px 30px rgb(0 22 84 / 10%);
@@ -63,5 +63,70 @@ header .toggle {
     display: inline-block;
     margin-bottom: 20px;
     color: #fff;
+  }
+} */
+
+.header__middle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.6rem 1.6rem;
+
+  .header__middle__logo {
+    img {
+      width: 8rem;
+    }
+  }
+
+  .main-nav {
+    display: flex;
+    align-items: center;
+
+    .menubar__button {
+      color: white;
+      font-size: 1.5rem;
+      display: none;
+    }
+
+    .main-menu {
+      display: flex;
+      column-gap: 0.8rem;
+      align-items: center;
+
+      .sub__menus__arrows {
+        position: relative;
+
+        a {
+          display: flex;
+          align-items: center;
+          column-gap: 0.2rem;
+        }
+
+        .sub__menus {
+          position: absolute;
+          top: 28px;
+          width: max-content;
+          z-index: 2;
+        }
+      }
+    }
+  }
+
+  a {
+    color: white;
+  }
+}
+
+@media (width< 520px) {
+  .header__middle {
+    .main-nav {
+      .menubar__button {
+        display: inline-block;
+      }
+
+      .main-menu {
+        display: none;
+      }
+    }
   }
 }
