navbar sub menus added

--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -7,7 +7,12 @@
   width: 100%;
   position: relative;
 }
-
+.btn{
+  background: rgb(0, 88, 146);
+  display: none; 
+  align-items: center;
+  justify-content: center;
+}
 .hero .container {
   padding-top: 15%;
 }
