--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -71,10 +71,12 @@ header .toggle {
   justify-content: space-between;
   align-items: center;
   padding: 0.6rem 1.6rem;
+  background: rgb(4, 73, 105);
 
   .header__middle__logo {
     img {
       width: 8rem;
+      padding: 0.5rem
     }
   }
 
@@ -90,22 +92,26 @@ header .toggle {
 
     .main-menu {
       display: flex;
-      column-gap: 0.8rem;
+      column-gap: 2rem;
       align-items: center;
+      
 
       .sub__menus__arrows {
         position: relative;
 
         a {
+        
           display: flex;
           align-items: center;
           column-gap: 0.2rem;
         }
 
         .sub__menus {
+          text-align: left;
           position: absolute;
-          top: 28px;
-          width: max-content;
+          font-size: 13px;
+          top: 3rem;
+          width: 3rem;
           z-index: 2;
         }
       }
@@ -114,6 +120,7 @@ header .toggle {
 
   a {
     color: white;
+    
   }
 }
 
