--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -72,7 +72,7 @@ header .toggle {
   justify-content: space-between;
   align-items: center;
   padding: 0.6rem 1.6rem;
-  background: rgb(248, 248, 248);
+  background: rgb(255, 255, 255);
 
   .header__middle__logo {
     img {
@@ -94,8 +94,9 @@ header .toggle {
     .main-menu {
       
       a{
+        border-radius: 10px;
         padding: 0.5rem;
-        background: white;
+        background: rgba(50, 50, 50, 0.179);
         color:black;
       }
       display: flex;
