urgent changes and updates

--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -17,8 +17,8 @@
   padding-top: 15%;
 }
 .hero h1 {
-  color: #fff;
-  font-size: 60px;
+  color: #ffffff;
+  font-size: 42px;
 }
 .hero p {
   color: #fff;
