--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -94,11 +94,16 @@ header .toggle {
     .main-menu {
       
       a{
-        border-radius: 10px;
+        
+        /* border-radius: 10px; */
         padding: 0.5rem;
-        background: rgba(50, 50, 50, 0.179);
+        background: rgb(255, 255, 255);
         color:black;
       }
+      a:hover {
+        background-color: rgba(2, 45, 98, 0.166);
+        color: white;
+        }
       display: flex;
       column-gap: 2rem;
       align-items: center;
@@ -122,7 +127,7 @@ header .toggle {
           text-align: left;
           position: absolute;
           font-size: 15px;
-          top: 3rem;
+          top: 3.5rem;
           width: 100%;
           z-index: 2;
         }
