--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -3,10 +3,12 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 90vh;
+  height: 100vh; /* Set height to 100vh to cover full height */
   width: 100%;
   position: relative;
 }
+
+
 .btn{
   background: rgb(0, 88, 146);
   display: none; 
