--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -112,6 +112,7 @@ nav .menu span {
   top: 3.5rem;
   width: 12rem;
   z-index: 100; /* Increase z-index to ensure it's displayed on top */
+  
 }
 
 .sub__menus a {
@@ -207,34 +208,31 @@ nav .menu span {
 
   .main-menu a {
     padding: 1.5rem;
-    color: #fff;
+    color: black; /* Set text color to black */
     
   }
+
   .menu-item:hover .sub__menus {
     display: block;
     visibility: visible;
     opacity: 1;
-    top: 3.5rem; /* Adjust top position as needed */
+    top: 3.5rem; /* Adjust top position  */
   }
-  .sub__menus {
-    text-align: left;
-    position: absolute;
-    font-size: 15px;
-    width: 12rem;
-    background-color: black;
-    z-index: 100; /* Increase z-index to ensure it's displayed on top */
+  .main-menu .apply-btn {
+    display: block; /*"Apply Now" button appears as a block */
+    margin-top: 1rem; /* top margin to separation  */
   }
   
-  .menu-item {
-    position: relative; /* Ensure menu items are positioned relatively */
+  .sub__menus a {
+    color: black; /* Set text color to black */
   }
   
-  .menu-item:hover .sub__menus {
-    display: block;
-    visibility: visible;
-    opacity: 1;
-    top: 3.5rem; /* Adjust top position as needed */
+  .sub__menus a:hover {
+    color: rgb(0, 88, 146); /* Hover color for dropdown menu items */
   }
   
+
+
+
   
 }
