--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -28,8 +28,13 @@
   cursor: pointer;
   margin-left: 15px;
   margin-right: 15px;
- 
+ transition: 0.2s ease-in;
   font-size: 20px;
+}
+
+.buttons button:hover {
+  background-color: #ffffff;
+  color:  rgb(0, 88, 146);
 }
 
 .hero .container {
