--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -144,7 +144,6 @@ nav .menu span {
   background: rgb(0, 88, 146);
   padding: 15px 30px;
   border: none;
-  
   border-radius: 5px;
   cursor: pointer;
 
@@ -172,11 +171,13 @@ nav .menu span {
 @media (max-width: 980px) {
   nav .menu {
     display: flex;
+    
   }
   nav {
+    
     flex-direction: column;
-    align-items: start;
-    width: 30%;
+    align-items: flex-start;
+    width: 100%;
     background: #1d64b1;
   }
   nav ul {
@@ -205,7 +206,7 @@ nav .menu span {
     margin-top: 100vh; /* Adjust as needed */
     height: 100vh;
     width: 1000px;
-    padding: rem;
+    padding: 5rem;
     z-index: 99;
   }
 
@@ -215,7 +216,8 @@ nav .menu span {
 
   .main-menu a {
     padding: 1.5rem;
-    color: black; /* Set text color to black */
+    margin-top: 1rem;
+    color: #fff; /* Set text color to black */
     
   }
 
@@ -231,7 +233,7 @@ nav .menu span {
   }
   
   .sub__menus a {
-    color: black; /* Set text color to black */
+    color: rgb(251, 251, 251); /* Set text color to black */
   }
   
   .sub__menus a:hover {
