--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -58,7 +58,7 @@ nav .menu {
   display: none;
   position: absolute;
   top: 1.75rem;
-  right: 1.75rem;
+  right: 2.75rem;
   flex-direction: column;
   justify-content: space-between;
   width: 2.25rem;
@@ -173,7 +173,7 @@ nav .menu span {
   nav {
     flex-direction: column;
     align-items: flex-start;
-    min-width: 100%;
+    width: 100%;
     background: #1d64b1;
   }
   nav ul {
@@ -189,7 +189,6 @@ nav .menu span {
   }
   nav .main-menu ul li {
     width: 100%;
-    
     text-align: center;
   }
   nav ul li {
