--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -36,8 +36,6 @@ header a {
   transition: 0.5s;
 }
 
-
-
 .header__middle {
   display: flex;
   justify-content: space-between;
@@ -69,7 +67,6 @@ nav .menu span {
   width: 100%;
   background-color: #fff;
   border-radius: 0.2rem;
-  
 }
 
 .main-nav {
@@ -82,16 +79,13 @@ nav .menu span {
   column-gap: 1.5rem;
   padding-right: 5em;
   align-items: center;
-  width:max-content;
-  
+  width: max-content;
 }
 
 .main-menu a {
   padding: 0.5rem;
   color: rgb(255, 255, 255);
 }
-
-
 
 .sub__menus__arrows {
   position: relative;
@@ -122,7 +116,7 @@ nav .menu span {
 .sub__menus a:hover {
   background: rgba(243, 243, 243, 0.552);
   transition: none;
-  color:#224acd;
+  color: #224acd;
 }
 
 .menu-item {
@@ -182,28 +176,27 @@ nav .menu span {
   }
   nav ul {
     display: none;
-    
+
     flex-direction: column;
     width: 100%;
     margin-bottom: 0.25rem;
   }
   nav ul .open {
     display: flex;
-    
   }
   nav .main-menu ul li {
+    text-decoration: none;
     width: 100%;
     text-align: center;
   }
   nav ul li {
-    
     margin: 0.2rem 0.5rem;
   }
 
   .main-menu {
     display: none;
     flex-direction: column;
-    align-items:center; /* Align items to the right */
+    align-items: center; /* Align items to the right */
     margin-right: 0;
     margin-left: 0;
     margin-top: 100vh; /* Adjust as needed */
@@ -211,11 +204,9 @@ nav .menu span {
     width: 100%; /* Adjusted to take full width */
     padding-top: 5rem; /* Adjusted padding as needed */
     z-index: 99;
-    
   }
 
   .main-menu.open {
-    
     display: flex;
   }
 
@@ -237,13 +228,13 @@ nav .menu span {
   }
 
   .sub__menus a {
-    color: rgb(0, 0, 0); /* Set text color to black */
+    min-width: min-content;
+    background: white;
+    color: #000; /* Set text color to black */
   }
 
   .sub__menus a:hover {
-    
-    color: #000000;
-    
+    color: #000;
     background-color: #ffffff; /* Hover color for dropdown menu items */
   }
 
