--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -176,7 +176,7 @@ nav .menu span {
   }
   nav ul {
     display: none;
-
+    
     flex-direction: column;
     width: 100%;
     margin-bottom: 0.25rem;
@@ -185,8 +185,8 @@ nav .menu span {
     display: flex;
   }
   nav .main-menu ul li {
-    text-decoration: none;
-    width: 100%;
+    
+    min-width: 100%;
     text-align: center;
   }
   nav ul li {
@@ -219,6 +219,7 @@ nav .menu span {
   .menu-item:hover .sub__menus,
   .sub__menus:hover {
     display: block; /* Ensure the dropdown stays open when hovered */
+    
     visibility: visible;
     opacity: 1;
   }
