--- a/src/components/common/footer/footer.css
+++ b/src/components/common/footer/footer.css
@@ -4,8 +4,9 @@
   color: #fff;
 }
 .footerContact h1 {
-  font-size: 40px;
+  font-size: 32px;
 }
+
 footer {
   background-color: #27292d;
   padding: 50px 0;
@@ -51,8 +52,21 @@ footer ul li {
   color: rgba(255, 255, 255, 0.5);
   border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
+footer .email{
+  min-width: 200px;
+  margin-right:1rem ;
+}
 @media screen and (max-width: 800px) {
   footer .container {
     grid-template-columns: repeat(2, 1fr);
   }
+  .container .btn5{
+    font-size: 18px;
+    font-weight: bold;
+    min-height: 50px;
+    min-width: 140px !important;
+    padding: 1rem;
+    margin: 1rem;
+  }
+  
 }
