--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -12,6 +12,12 @@
   margin-bottom: 20px;
   line-height: 30px;
 }
+.about .welcome-container {
+  background-color: white; /* Set background color to white */
+  padding: 20px; /* Add padding for spacing */
+  border-radius: 10px; /* Add border radius for rounded corners */
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Add shadow for depth */
+}
 @media screen and (max-width: 768px) {
   .about .container {
     flex-direction: column;
@@ -22,4 +28,13 @@
   .about .container img {
     margin-top: 50px;
   }
+  .about .welcome-container h2 {
+    text-align: center;
+  }
+  
+  .about .welcome-container .content-container {
+    text-align: center;
+  }
+  
+
 }
