--- a/src/components/rates/CurrentRates.css
+++ b/src/components/rates/CurrentRates.css
@@ -1,12 +1,12 @@
 
 
-.container {
+.currentrates{
   text-align: center;
   margin-top: 50px;
   background-color: white; 
 }
 
-.container h1 {
+.currentrates h1 {
   font-size: 24px;
   color: #333;
 }
