--- a/src/components/rates/CurrentRates.css
+++ b/src/components/rates/CurrentRates.css
@@ -1,12 +1,16 @@
 
 
-.currentrates{
-  text-align: center;
-  margin-top: 50px;
-  background-color: white; 
-}
-
 .currentrates h1 {
   font-size: 24px;
   color: #333;
+}
+
+
+
+.currentrates {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Set height to 100% of viewport height */
+  background-color: white; /* Set background color to white */
 }
