--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -13,9 +13,10 @@
   line-height: 30px;
 }
 .about .welcome-container {
+  
   background-color: white; /* Set background color to white */
   padding: 20px; /* Add padding for spacing */
-  border-radius: 10px; /* Add border radius for rounded corners */
+  /* border-radius: 10px; */
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Add shadow for depth */
 }
 @media screen and (max-width: 768px) {
