--- a/src/components/mortgages/Arm.css
+++ b/src/components/mortgages/Arm.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Set height to 100% of viewport height */
+    height: 500px; /* Set height to 100% of viewport height */
     background-color: white; /* Set background color to white */
   }
  
