--- a/src/components/mortgages/Arm.css
+++ b/src/components/mortgages/Arm.css
@@ -1,51 +1,42 @@
+/* Set margin and padding to 0 for the whole page */
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: 'Poppins', sans-serif;
+}
 
-.arm h1 {
-    font-size: 24px;
-    color: #333;
-  }
-  
-  /* CurrentRates.css */
-  
-  .arm {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 500px; /* Set height to 100% of viewport height */
-    background-color: white; /* Set background color to white */
-  }
- 
-.arm {
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Align items vertically center */
-    text-align: center; /* Align text center */
-  }
-  
-  .arm p {
-    width: 50%; /* Set the width of paragraph */
-  }
-  
-  .arm p:first-child {
-    text-align: left; /* Align first paragraph to left */
-  }
-  
-  .arm p:last-child {
-    text-align: right; /* Align last paragraph to right */
-  }
-  /* Arm.css */
+/* Style the container for the ARM component */
+.arm-container {
+  text-align: center;
+  padding: 20px;
+  position: relative; /* Make the container relative for absolute positioning */
+}
 
-.apply-button {
-    margin-top: 20px; /* Add some margin */
-    padding: 10px 20px; /* Add padding to make the button larger */
-    font-size: 16px; /* Increase font size */
-    background-color: #007bff; /* Blue background color */
-    color: white; /* White text color */
-    border: none; /* Remove border */
-    border-radius: 5px; /* Add border radius */
-    cursor: pointer; /* Add pointer cursor */
-  }
-  
-  .apply-button:hover {
-    background-color: #0056b3; /* Darker blue color on hover */
-  }
-  
+/* Style the container for the image */
+.image-container {
+  width: 100%;
+  height: 65vh; /* Adjust the height as needed */
+  overflow: hidden;
+  margin-bottom: 20px;
+  position: relative; /* Make the container relative for absolute positioning */
+}
+
+/* Style the image */
+.arm-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensure the image covers the container without distortion */
+  object-position: center; /* Center the image within its container */
+}
+
+/* Style the text overlay */
+.overlay-text-arm {
+  position: absolute;
+  bottom: 10px; /* Adjust this value to move the text vertically */
+  right: 10px; /* Adjust this value to move the text horizontally */
+  color: rgb(0, 0, 0);
+  font-size: 18px;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0.5, 0.5); /* Add shadow for better visibility */
+}
